chore(deps): fixes Dependabot alert for Prototype Pollution in protobufjs (affects versions < 6.11.3)

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "lint",
     "test"
   ],
+  "resolutions": {
+    "protobufjs": "^6.11.3"
+  },
   "dependencies": {
     "@faker-js/faker": "^6.1.2",
     "@hookform/resolvers": "^2.8.8",
